update mobile table alignment; other small fixes; next to-do is pt tracker table

--- a/src/components/point-tracker-table/_point-tracker-table.scss
+++ b/src/components/point-tracker-table/_point-tracker-table.scss
@@ -66,7 +66,7 @@
 }
 
 .new-subject {
-  float: center;
+  // float: center;
   display: inline-block;
 }
 
