--- a/src/components/synopsis-reports-list/_synopsis-reports-list.scss
+++ b/src/components/synopsis-reports-list/_synopsis-reports-list.scss
@@ -36,11 +36,14 @@ td:last-child {
   table, thead, tbody, th, td, tr {
     display: block;
   }
+
   thead tr {
     position: absolute;
     top: -9999px;
     left: -9999px;
   }
+
+
   tr { border: 1px solid #ccc; }
 
   td {
@@ -52,13 +55,13 @@ td:last-child {
   }
   td:before {
     position: absolute;
-    top: 12px;
     left: 6px;
     width: 100px;
     padding-right: 40px;
     white-space: nowrap;
     margin-left: -100px;
   }
+
   td:nth-of-type(1):before { content: "Name"; }
   td:nth-of-type(2):before { content: "Report Dates"; }
   td:nth-of-type(3):before { content: "SR Status"; }
@@ -74,7 +77,7 @@ td:last-child {
   border: 1px solid #0B9444;
   border-radius: 20px;
   display: initial;
-  // margin-top: -4px;
+  margin-top: -4px;
   margin-right: 20px;
   line-height: 18px;
   float: right;
